2006-04-08  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/c.lang: highlight XPM files.

2006-04-07  Yevgen Muntyan  <muntyan@tamu.edu>

	* acinclude.m4 (GTK_SOURCE_VIEW_AC_PCRE): require pcre-6.7.
	* configure.in: report whether system pcre is used.

2006-04-07  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c: (file_parse): forgot to commit last time.
	* gtksourceview/libegg/regex/eggregex.c: (egg_regex_optimize): do set pattern->extra
        member after optimizing.
	* tests/test-widget.c: removed debug_thing() and debug_thing2().
	* gtksourceview/language-specs/cpp.lang: moved keywords to keywords section.
	* gtksourceview/language-specs/gtk-doc.lang: make sure */ closes gtk-doc comment.
	* gtksourceview/language-specs/makefile.lang: highlight ${foo} like $(foo).
	* gtksourceview/language-specs/po.lang: use "location" style instead of "others-2".

2006-03-29  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c: (file_parse): do not
        leak lang files fd's.

2006-02-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/eggregex.c: (egg_regex_fetch_named):
        fixed for the case when PCRE_DUPNAMES is used.
	* gtksourceview/gtksourcecontextengine.c: (replace_start_regex):
        use correct arguments to egg_regex_fetch_named().
	* gtksourceview/language-specs/language2.rng,
        gtksourceview/gtksourcelanguage-parser-2.c: (get_regex_flags),
        (update_regex_flags), (expand_regex): new regex option "dupnames",
        which is translated to EGG_REGEX_DUPNAMES.
	* gtksourceview/language-specs/sh.lang: use "dupnames" thing to
        simplify here-doc context.

2006-02-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/eggregex.h,
        gtksourceview/libegg/regex/eggregex.c: new function
        egg_regex_get_backrefmax().
	* gtksourceview/gtksourcelanguageparser-2.c: (expand_regex):